fix: display of soql issues to avoid truncation

--- a/log-viewer/resources/css/DatabaseView.scss
+++ b/log-viewer/resources/css/DatabaseView.scss
@@ -76,17 +76,14 @@ $footerActiveColor: #d00 !default; //footer bottom active text color
 #dbDmlTable,
 #dbSoqlTable {
   width: 100%;
-
   margin-bottom: 1rem;
   overflow: visible;
   max-width: 100%;
 }
 .soqlDBDetailView {
-  display: flex;
   border-bottom: 2px solid var(--vscode-editorHoverWidget-border);
   padding: 5px 0px 5px 0px;
   background-color: var(--vscode-editorHoverWidget-background);
-  max-width: 100%;
 }
 .tabulator-tooltip {
   background: var(--vscode-editor-background);
